# financial-record

./: README.md  pyproject.toml
src/financial_record/: actions.py  main.py  render.py  utils.py
tests/: actions.py
